en contacto solo falta que se agregen los iconos de linkedin facebook y wp. Pero aparecio un bug en nuestro impacto que hace overflow albody

--- a/src/components/contact/contact.theme.module.scss
+++ b/src/components/contact/contact.theme.module.scss
@@ -1,3 +1,4 @@
+@import "../../styles/breakpoints.scss";
 @import "../../styles/styleguide.scss";
 
 .mainContainer {
@@ -12,6 +13,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
+    @include respond-to("tablet") {
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
 }
 
 footer {
@@ -25,6 +32,7 @@ footer {
         padding: 0;
         margin: 10px;
         font-size: 0.8rem;
+        text-align: center;
 
         a {
             font-size: 0.8rem;
